[tool.poetry]
name = "weather-app"
version = "0.1.0"
description = "A CLI app to access realtime weather data and forecasts"
authors = ["fberlato <francesco.berlato.92@gmail.com>"]
readme = "README.md"
packages = [{include = "weather_app"}]

[tool.poetry.scripts]
weather-app = "weather_app.weather:app"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
rich = "^13.7.1"
python-dateutil = "^2.9.0.post0"
typer = {extras = ["all"], version = "^0.12.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
