[project]
name = "weather-app"
version = "0.1.0"
description = "A CLI app to access realtime weather data and forecasts"
authors = [{ name = "fberlato", email = "francesco.berlato.92@gmail.com" }]
requires-python = "<4.0,>=3.11"
readme = "README.md"
dependencies = [
    "httpx<1.0.0,>=0.27.0",
    "rich<14.0.0,>=13.7.1",
    "python-dateutil<3.0.0.0,>=2.9.0.post0",
    "typer[all]<1.0.0,>=0.12.4",
    "keyring<26.0.0,>=25.3.0",
]

[project.scripts]
weather-app = "weather_app.weather:app"

[tool.hatch.build.targets.sdist]
include = ["weather_app"]

[tool.hatch.build.targets.wheel]
include = ["weather_app"]

[tool.pdm.build]
includes = [
    "weather_app",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
